StudentReport feature is added.